# ChangeLog for sci-libs/libfac
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jun 2011; Justin Lecher <jlec@gentoo.org> libfac-3.1.0.ebuild,
  libfac-3.1.1.ebuild, metadata.xml:
  Cleaned ebuild and add USE description to metadata.xml

*libfac-3.1.1 (07 Jul 2010)

  07 Jul 2010; Thomas Kahle <tom111@gmx.de> +libfac-3.1.1.ebuild:
  Bump to 3.1.1

  15 Mar 2010; Thomas Kahle <tom111@gmx.de> libfac-3.1.0.ebuild:
  SRC_URI updated according to upstreams changes

  26 Nov 2009; Thomas Kahle <tom111@gmx.de>
  QA Fixes

  24 Nov 2009; Thomas Kahle <tom111@gmx.de> +libfac-3.1.0.ebuild
  +ChangeLog +metadata.xml

  Initial upload
  Bug #294473

